[package]
name = "cluConstData"
version = "1.3.0"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluConstData.git"
edition = "2018"

license = "Apache-2.0"
readme = "README.md"

description = "Create and merge any persistent data at compile time."
keywords = ["const_data", "concat_const_data", "no_std", "cluConstData", "clucompany"]
categories = ["development-tools"]

[dependencies]
cluFullTransmute = "1.0.2"