[package]
name = "cluConstData"
version = "2.1.1"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluConstData.git"
edition = "2024"

license = "Apache-2.0"
readme = "README.md"

description = "Create and merge any persistent data at compile time."
keywords = ["const_data", "concat_const_data", "no_std", "cluConstData", "clucompany"]
categories = ["development-tools"]

[features]
default = ["const_data","const_buf"]

const_buf = []
const_data = []

[dependencies]
cluFullTransmute = {version = "1.3.1", default-features = false, features = ["require_debug_assert_transmute", "support_size_check_transmute"]}
